@@ -1333,7 +1333,7 @@ TECH_LEVEL_NAMES=\
 RACIAL_CATEGORY_IS_UNDEAD=Undead
 
 # Racial categories that you would call an "Outsider"
-RACIAL_CATEGORY_IS_OUTSIDER=Demon, Outsider
+RACIAL_CATEGORY_IS_OUTSIDER=Demon, Outsider, Devil, Mephit, Elemental, Celestial
 
 # Racial categories that you would call an "Insect"
 RACIAL_CATEGORY_IS_INSECT=Insect, Arachnid
