@@ -44,6 +44,7 @@
   43. New Thief/Sailor Skills: Mast Shot, Warning Shot, Silent Running
   44. If it's not already obvious, new char class in beta: Pirate
   45. Internal: Web Server upgraded to rev 2.4 (SSL fixes and Protocol switching)
+  46. Mundane STAT command now supports HEALTH, RESISTS, ATTRIBUTES
 # Build 5.9.3 Released 05/08/2016
    1. Follower behavior now has a few more options.
    2. STAT [MOBNAME] will now give full editor stats also, and 
